# python-cookiecutter

./: .gitignore  .pre-commit-config.yaml  README.md  bitbucket-pipelines.yml  cookiecutter.json  setup.cfg
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Makefile  README.md  activate-env  activate-env.sh  bitbucket-pipelines.yml  create-env.sh  freeze-env  freeze-env.sh  pip-install  pip-install.sh  pyproject.toml
