[metadata]
name = cookiecutter_silo_python_project
version = 0.0.0
description = Cookiecutter template for Silo.AI Python projects
long_description = file: README.md

[options]
include_package_data = True
packages = find:
install_requires =
  cookiecutter


[options.extras_require]
dev =
  black
  pylint
  pytest
  pytest-cookies
  pyyaml
  pre-commit
