[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug|replace('-','_') }}"
description = "{{ cookiecutter.project_short_description }}"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "{{ cookiecutter.contact_name }}", email = "{{ cookiecutter.contact_email }}"}
]
maintainers = [
    {name = "{{ cookiecutter.contact_name }}", email = "{{ cookiecutter.contact_email }}"}
]
classifiers = [
    "Programming Language :: Python"
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["dev-requirements.txt"]}

[tool.black]
line-length = 88

[tool.pytest.ini_options]
addopts = "--doctest-modules"
log_cli = "1"
log_cli_level = "INFO"
